--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sonner": "^1.7.1",
     "uuid": "^11.0.2"
   },
   "devDependencies": {
