--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,6 @@
 {
-  "name": "InstaChef",
-  "short_name": "InstaChef",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#FFF3E0",
-  "theme_color": "#FFF3E0",
+  "name": "Instachef",
+  "short_name": "Instachef",
   "icons": [
     {
       "src": "/android-icon-36x36.png",
